usr/bin/modula2.d/_vax.d/p2m2/y.output

state 0
	$accept : _pascalFile $end 

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FUNCTION  shift 23
	PROGRAM  shift 5
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  error

	pascalFile  goto 1
	CompilationUnit  goto 2
	program  goto 3
	lsDeclaration  goto 4
	declaration  goto 6
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 1
	$accept :  pascalFile_$end 

	$end  accept
	.  error


state 2
	pascalFile :  CompilationUnit_    (1)

	.  reduce 1


state 3
	CompilationUnit :  program_    (2)

	.  reduce 2


state 4
	CompilationUnit :  lsDeclaration_    (3)
	lsDeclaration :  lsDeclaration_declaration 

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FUNCTION  shift 23
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  reduce 3

	declaration  goto 25
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 5
	program :  PROGRAM_ident zoplsIdent SEMICOLON $$4 block END DOT 

	IDENT  shift 27
	.  error

	ident  goto 26

state 6
	lsDeclaration :  declaration_    (11)

	.  reduce 11


state 7
	declaration :  IncludeDecl_    (13)

	.  reduce 13


state 8
	declaration :  LabelDecl_    (14)

	.  reduce 14


state 9
	declaration :  ConstDecl_    (15)
	ConstDecl :  ConstDecl_ConstDef SEMICOLON 

	IDENT  shift 27
	.  reduce 15

	ident  goto 31
	ConstDef  goto 28
	exportIdent  goto 29
	prIdent  goto 30

state 10
	declaration :  TypeDecl_    (16)
	TypeDecl :  TypeDecl_TypeDef $$32 SEMICOLON 

	IDENT  shift 27
	.  reduce 16

	ident  goto 31
	exportIdent  goto 33
	TypeDef  goto 32
	prIdent  goto 30

state 11
	declaration :  VarDecl_    (17)
	VarDecl :  VarDecl_VarDef $$39 SEMICOLON 

	IDENT  shift 27
	.  reduce 17

	ident  goto 31
	exportIdent  goto 36
	VarDef  goto 34
	varIdentList  goto 35
	prIdent  goto 30

state 12
	declaration :  ProcedureDecl_    (18)

	.  reduce 18


state 13
	declaration :  error_SEMICOLON 

	SEMICOLON  shift 37
	.  error


state 14
	IncludeDecl :  SHARP_INCLUDE $$20 STRCONST 

	INCLUDE  shift 38
	.  error


state 15
	LabelDecl :  LABEL_$$22 oplsElement SEMICOLON 
	$$22 : _    (22)

	.  reduce 22

	$$22  goto 39

state 16
	ConstDecl :  CONST_$$24 ConstDef SEMICOLON 
	$$24 : _    (24)

	.  reduce 24

	$$24  goto 40

state 17
	TypeDecl :  TYPE_$$29 TypeDef $$30 SEMICOLON 
	$$29 : _    (29)

	.  reduce 29

	$$29  goto 41

state 18
	VarDecl :  VAR_$$36 VarDef $$37 SEMICOLON 
	$$36 : _    (36)

	.  reduce 36

	$$36  goto 42

state 19
	ProcedureDecl :  FunctionHeader_block END SEMICOLON 
	ProcedureDecl :  FunctionHeader_EXTERNAL SEMICOLON 
	oplsDeclaration : _    (9)

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FORWARD  shift 46
	FUNCTION  shift 23
	EXTERNAL  shift 44
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  reduce 9

	lsDeclaration  goto 47
	block  goto 43
	oplsDeclaration  goto 45
	declaration  goto 6
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 20
	ProcedureDecl :  ProcedureHeader_block END SEMICOLON 
	ProcedureDecl :  ProcedureHeader_EXTERNAL SEMICOLON 
	oplsDeclaration : _    (9)

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FORWARD  shift 46
	FUNCTION  shift 23
	EXTERNAL  shift 49
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  reduce 9

	lsDeclaration  goto 47
	block  goto 48
	oplsDeclaration  goto 45
	declaration  goto 6
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 21
	FunctionHeader :  FunctionPrefix_SEMICOLON 
	FunctionHeader :  FunctionPrefix_fparameterList COLON $$50 prIdent $$51 SEMICOLON 
	fparameterList : _    (57)

	SEMICOLON  shift 50
	LPAREN  shift 53
	.  reduce 57

	parameterList  goto 52
	fparameterList  goto 51

state 22
	ProcedureHeader :  ProcedurePrefix_SEMICOLON 
	ProcedureHeader :  ProcedurePrefix_parameterList SEMICOLON 

	SEMICOLON  shift 54
	LPAREN  shift 53
	.  error

	parameterList  goto 55

state 23
	FunctionPrefix :  FUNCTION_$$47 exportIdent 
	$$47 : _    (47)

	.  reduce 47

	$$47  goto 56

state 24
	ProcedurePrefix :  PROCEDURE_$$43 exportIdent 
	$$43 : _    (43)

	.  reduce 43

	$$43  goto 57

state 25
	lsDeclaration :  lsDeclaration declaration_    (12)

	.  reduce 12


state 26
	program :  PROGRAM ident_zoplsIdent SEMICOLON $$4 block END DOT 
	zoplsIdent : _    (280)

	LPAREN  shift 59
	.  reduce 280

	zoplsIdent  goto 58

state 27
	ident :  IDENT_    (287)

	.  reduce 287


state 28
	ConstDecl :  ConstDecl ConstDef_SEMICOLON 

	SEMICOLON  shift 60
	.  error


state 29
	ConstDef :  exportIdent_EQUALS $$27 expression 

	EQUALS  shift 61
	.  error


state 30
	exportIdent :  prIdent_    (294)

	.  reduce 294


state 31
	prIdent :  ident_    (279)

	.  reduce 279


state 32
	TypeDecl :  TypeDecl TypeDef_$$32 SEMICOLON 
	$$32 : _    (32)

	.  reduce 32

	$$32  goto 62

state 33
	TypeDef :  exportIdent_EQUALS $$34 typeDefinition 

	EQUALS  shift 63
	.  error


state 34
	VarDecl :  VarDecl VarDef_$$39 SEMICOLON 
	$$39 : _    (39)

	.  reduce 39

	$$39  goto 64

state 35
	VarDef :  varIdentList_COLON $$41 typeDefinition 
	varIdentList :  varIdentList_COMMA $$296 exportIdent 

	COMMA  shift 66
	COLON  shift 65
	.  error


state 36
	varIdentList :  exportIdent_    (295)

	.  reduce 295


state 37
	declaration :  error SEMICOLON_    (19)

	.  reduce 19


state 38
	IncludeDecl :  SHARP INCLUDE_$$20 STRCONST 
	$$20 : _    (20)

	.  reduce 20

	$$20  goto 67

state 39
	LabelDecl :  LABEL $$22_oplsElement SEMICOLON 
	oplsElement : _    (244)

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  reduce 244

	ident  goto 31
	oplsElement  goto 68
	expression  goto 71
	prIdent  goto 86
	ElementList  goto 69
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	Element  goto 70
	term  goto 76
	lsAddTerm  goto 73

state 40
	ConstDecl :  CONST $$24_ConstDef SEMICOLON 

	IDENT  shift 27
	.  error

	ident  goto 31
	ConstDef  goto 87
	exportIdent  goto 29
	prIdent  goto 30

state 41
	TypeDecl :  TYPE $$29_TypeDef $$30 SEMICOLON 

	IDENT  shift 27
	.  error

	ident  goto 31
	exportIdent  goto 33
	TypeDef  goto 88
	prIdent  goto 30

state 42
	VarDecl :  VAR $$36_VarDef $$37 SEMICOLON 

	IDENT  shift 27
	.  error

	ident  goto 31
	exportIdent  goto 36
	VarDef  goto 89
	varIdentList  goto 35
	prIdent  goto 30

state 43
	ProcedureDecl :  FunctionHeader block_END SEMICOLON 

	END  shift 90
	.  error


state 44
	ProcedureDecl :  FunctionHeader EXTERNAL_SEMICOLON 

	SEMICOLON  shift 91
	.  error


state 45
	block :  oplsDeclaration_BEGIN $$6 StatementSequence 

	BEGIN  shift 92
	.  error


state 46
	block :  FORWARD_    (8)

	.  reduce 8


state 47
	oplsDeclaration :  lsDeclaration_    (10)
	lsDeclaration :  lsDeclaration_declaration 

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FUNCTION  shift 23
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  reduce 10

	declaration  goto 25
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 48
	ProcedureDecl :  ProcedureHeader block_END SEMICOLON 

	END  shift 93
	.  error


state 49
	ProcedureDecl :  ProcedureHeader EXTERNAL_SEMICOLON 

	SEMICOLON  shift 94
	.  error


state 50
	FunctionHeader :  FunctionPrefix SEMICOLON_    (49)

	.  reduce 49


state 51
	FunctionHeader :  FunctionPrefix fparameterList_COLON $$50 prIdent $$51 SEMICOLON 

	COLON  shift 95
	.  error


state 52
	fparameterList :  parameterList_    (58)

	.  reduce 58


state 53
	parameterList :  LPAREN_$$59 lsParam RPAREN 
	$$59 : _    (59)

	.  reduce 59

	$$59  goto 96

state 54
	ProcedureHeader :  ProcedurePrefix SEMICOLON_    (45)

	.  reduce 45


state 55
	ProcedureHeader :  ProcedurePrefix parameterList_SEMICOLON 

	SEMICOLON  shift 97
	.  error


state 56
	FunctionPrefix :  FUNCTION $$47_exportIdent 

	IDENT  shift 27
	.  error

	ident  goto 31
	exportIdent  goto 98
	prIdent  goto 30

state 57
	ProcedurePrefix :  PROCEDURE $$43_exportIdent 

	IDENT  shift 27
	.  error

	ident  goto 31
	exportIdent  goto 99
	prIdent  goto 30

state 58
	program :  PROGRAM ident zoplsIdent_SEMICOLON $$4 block END DOT 

	SEMICOLON  shift 100
	.  error


state 59
	zoplsIdent :  LPAREN_IdentList RPAREN 

	IDENT  shift 27
	.  error

	ident  goto 102
	IdentList  goto 101

state 60
	ConstDecl :  ConstDecl ConstDef SEMICOLON_    (26)

	.  reduce 26


state 61
	ConstDef :  exportIdent EQUALS_$$27 expression 
	$$27 : _    (27)

	.  reduce 27

	$$27  goto 103

state 62
	TypeDecl :  TypeDecl TypeDef $$32_SEMICOLON 

	SEMICOLON  shift 104
	.  error


state 63
	TypeDef :  exportIdent EQUALS_$$34 typeDefinition 
	$$34 : _    (34)

	.  reduce 34

	$$34  goto 105

state 64
	VarDecl :  VarDecl VarDef $$39_SEMICOLON 

	SEMICOLON  shift 106
	.  error


state 65
	VarDef :  varIdentList COLON_$$41 typeDefinition 
	$$41 : _    (41)

	.  reduce 41

	$$41  goto 107

state 66
	varIdentList :  varIdentList COMMA_$$296 exportIdent 
	$$296 : _    (296)

	.  reduce 296

	$$296  goto 108

state 67
	IncludeDecl :  SHARP INCLUDE $$20_STRCONST 

	STRCONST  shift 109
	.  error


state 68
	LabelDecl :  LABEL $$22 oplsElement_SEMICOLON 

	SEMICOLON  shift 110
	.  error


state 69
	oplsElement :  ElementList_    (245)
	ElementList :  ElementList_COMMA $$265 Element 

	COMMA  shift 111
	.  reduce 245


state 70
	ElementList :  Element_    (264)

	.  reduce 264


state 71
	Element :  expression_    (261)
	Element :  expression_DOTDOT $$262 expression 

	DOTDOT  shift 112
	.  reduce 261


state 72
	expression :  SimpleExpression_    (227)
	expression :  SimpleExpression_relation SimpleExpression 

	EQUALS  shift 114
	LESS  shift 116
	GREATER  shift 118
	NOTEQUAL  shift 115
	LSEQUAL  shift 117
	GREQUAL  shift 119
	IN  shift 120
	.  reduce 227

	relation  goto 113

state 73
	SimpleExpression :  lsAddTerm_    (269)
	lsAddTerm :  lsAddTerm_AddOperator term 

	PLUS  shift 122
	MINUS  shift 123
	OR  shift 124
	.  reduce 269

	AddOperator  goto 121

state 74
	SimpleExpression :  PLUS_$$270 lsAddTerm 
	$$270 : _    (270)

	.  reduce 270

	$$270  goto 125

state 75
	SimpleExpression :  MINUS_$$272 lsAddTerm 
	$$272 : _    (272)

	.  reduce 272

	$$272  goto 126

state 76
	term :  term_MulOperator factor 
	lsAddTerm :  term_    (274)

	ASTERISK  shift 128
	SLASH  shift 129
	AND  shift 132
	DIV  shift 130
	MOD  shift 131
	.  reduce 274

	MulOperator  goto 127

state 77
	term :  factor_    (267)

	.  reduce 267


state 78
	factor :  NUMBER_    (211)

	.  reduce 211


state 79
	factor :  CHARCONST_    (212)

	.  reduce 212


state 80
	factor :  STRCONST_    (213)

	.  reduce 213


state 81
	factor :  setexpr_    (214)

	.  reduce 214


state 82
	factor :  designator_    (215)
	factor :  designator_ActualParameters 
	designator :  designator_LBRACKET $$222 ExpList RBRACKET 
	designator :  designator_UPARROW 
	designator :  designator_DOT $$225 prIdent 

	DOT  shift 136
	LPAREN  shift 137
	LBRACKET  shift 134
	UPARROW  shift 135
	.  reduce 215

	ActualParameters  goto 133

state 83
	factor :  LPAREN_$$217 expression RPAREN 
	$$217 : _    (217)

	.  reduce 217

	$$217  goto 138

state 84
	factor :  NOT_$$219 factor 
	$$219 : _    (219)

	.  reduce 219

	$$219  goto 139

state 85
	setexpr :  LBRACKET_$$240 oplsElement RBRACKET 
	$$240 : _    (240)

	.  reduce 240

	$$240  goto 140

state 86
	designator :  prIdent_    (221)
	setexpr :  prIdent_LBRACE $$242 oplsElement RBRACE 

	LBRACE  shift 141
	.  reduce 221


state 87
	ConstDecl :  CONST $$24 ConstDef_SEMICOLON 

	SEMICOLON  shift 142
	.  error


state 88
	TypeDecl :  TYPE $$29 TypeDef_$$30 SEMICOLON 
	$$30 : _    (30)

	.  reduce 30

	$$30  goto 143

state 89
	VarDecl :  VAR $$36 VarDef_$$37 SEMICOLON 
	$$37 : _    (37)

	.  reduce 37

	$$37  goto 144

state 90
	ProcedureDecl :  FunctionHeader block END_SEMICOLON 

	SEMICOLON  shift 145
	.  error


state 91
	ProcedureDecl :  FunctionHeader EXTERNAL SEMICOLON_    (55)

	.  reduce 55


state 92
	block :  oplsDeclaration BEGIN_$$6 StatementSequence 
	$$6 : _    (6)

	.  reduce 6

	$$6  goto 146

state 93
	ProcedureDecl :  ProcedureHeader block END_SEMICOLON 

	SEMICOLON  shift 147
	.  error


state 94
	ProcedureDecl :  ProcedureHeader EXTERNAL SEMICOLON_    (56)

	.  reduce 56


state 95
	FunctionHeader :  FunctionPrefix fparameterList COLON_$$50 prIdent $$51 SEMICOLON 
	$$50 : _    (50)

	.  reduce 50

	$$50  goto 148

state 96
	parameterList :  LPAREN $$59_lsParam RPAREN 
	opParamType : _    (138)

	FUNCTION  shift 154
	PROCEDURE  shift 151
	VAR  shift 153
	.  reduce 138

	lsParam  goto 149
	formalParam  goto 150
	opParamType  goto 152

state 97
	ProcedureHeader :  ProcedurePrefix parameterList SEMICOLON_    (46)

	.  reduce 46


state 98
	FunctionPrefix :  FUNCTION $$47 exportIdent_    (48)

	.  reduce 48


state 99
	ProcedurePrefix :  PROCEDURE $$43 exportIdent_    (44)

	.  reduce 44


state 100
	program :  PROGRAM ident zoplsIdent SEMICOLON_$$4 block END DOT 
	$$4 : _    (4)

	.  reduce 4

	$$4  goto 155

state 101
	zoplsIdent :  LPAREN IdentList_RPAREN 
	IdentList :  IdentList_COMMA ident 

	COMMA  shift 157
	RPAREN  shift 156
	.  error


state 102
	IdentList :  ident_    (285)

	.  reduce 285


state 103
	ConstDef :  exportIdent EQUALS $$27_expression 

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	expression  goto 158
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	term  goto 76
	lsAddTerm  goto 73

state 104
	TypeDecl :  TypeDecl TypeDef $$32 SEMICOLON_    (33)

	.  reduce 33


state 105
	TypeDef :  exportIdent EQUALS $$34_typeDefinition 
	opPACKED : _    (102)

	PLUS  shift 179
	MINUS  shift 180
	LPAREN  shift 175
	UPARROW  shift 169
	IDENT  shift 178
	NUMBER  shift 176
	CHARCONST  shift 177
	PACKED  shift 181
	PFILE  shift 171
	RECORD  shift 173
	SET  shift 172
	.  reduce 102

	ident  goto 31
	typeDefinition  goto 159
	prIdent  goto 174
	SimpleType  goto 160
	PointerType  goto 161
	ArrayType  goto 162
	FileType  goto 163
	SetType  goto 164
	RecordType  goto 165
	typeIdentifier  goto 166
	enumeration  goto 167
	SubrangeType  goto 168
	opPACKED  goto 170

state 106
	VarDecl :  VarDecl VarDef $$39 SEMICOLON_    (40)

	.  reduce 40


state 107
	VarDef :  varIdentList COLON $$41_typeDefinition 
	opPACKED : _    (102)

	PLUS  shift 179
	MINUS  shift 180
	LPAREN  shift 175
	UPARROW  shift 169
	IDENT  shift 178
	NUMBER  shift 176
	CHARCONST  shift 177
	PACKED  shift 181
	PFILE  shift 171
	RECORD  shift 173
	SET  shift 172
	.  reduce 102

	ident  goto 31
	typeDefinition  goto 182
	prIdent  goto 174
	SimpleType  goto 160
	PointerType  goto 161
	ArrayType  goto 162
	FileType  goto 163
	SetType  goto 164
	RecordType  goto 165
	typeIdentifier  goto 166
	enumeration  goto 167
	SubrangeType  goto 168
	opPACKED  goto 170

state 108
	varIdentList :  varIdentList COMMA $$296_exportIdent 

	IDENT  shift 27
	.  error

	ident  goto 31
	exportIdent  goto 183
	prIdent  goto 30

state 109
	IncludeDecl :  SHARP INCLUDE $$20 STRCONST_    (21)

	.  reduce 21


state 110
	LabelDecl :  LABEL $$22 oplsElement SEMICOLON_    (23)

	.  reduce 23


state 111
	ElementList :  ElementList COMMA_$$265 Element 
	$$265 : _    (265)

	.  reduce 265

	$$265  goto 184

state 112
	Element :  expression DOTDOT_$$262 expression 
	$$262 : _    (262)

	.  reduce 262

	$$262  goto 185

state 113
	expression :  SimpleExpression relation_SimpleExpression 

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 186
	term  goto 76
	lsAddTerm  goto 73

state 114
	relation :  EQUALS_    (254)

	.  reduce 254


state 115
	relation :  NOTEQUAL_    (255)

	.  reduce 255


state 116
	relation :  LESS_    (256)

	.  reduce 256


state 117
	relation :  LSEQUAL_    (257)

	.  reduce 257


state 118
	relation :  GREATER_    (258)

	.  reduce 258


state 119
	relation :  GREQUAL_    (259)

	.  reduce 259


state 120
	relation :  IN_    (260)

	.  reduce 260


state 121
	lsAddTerm :  lsAddTerm AddOperator_term 

	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	term  goto 187

state 122
	AddOperator :  PLUS_    (251)

	.  reduce 251


state 123
	AddOperator :  MINUS_    (252)

	.  reduce 252


state 124
	AddOperator :  OR_    (253)

	.  reduce 253


state 125
	SimpleExpression :  PLUS $$270_lsAddTerm 

	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	term  goto 76
	lsAddTerm  goto 188

state 126
	SimpleExpression :  MINUS $$272_lsAddTerm 

	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	term  goto 76
	lsAddTerm  goto 189

state 127
	term :  term MulOperator_factor 

	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 190
	setexpr  goto 81

state 128
	MulOperator :  ASTERISK_    (246)

	.  reduce 246


state 129
	MulOperator :  SLASH_    (247)

	.  reduce 247


state 130
	MulOperator :  DIV_    (248)

	.  reduce 248


state 131
	MulOperator :  MOD_    (249)

	.  reduce 249


state 132
	MulOperator :  AND_    (250)

	.  reduce 250


state 133
	factor :  designator ActualParameters_    (216)

	.  reduce 216


state 134
	designator :  designator LBRACKET_$$222 ExpList RBRACKET 
	$$222 : _    (222)

	.  reduce 222

	$$222  goto 191

state 135
	designator :  designator UPARROW_    (224)

	.  reduce 224


state 136
	designator :  designator DOT_$$225 prIdent 
	$$225 : _    (225)

	.  reduce 225

	$$225  goto 192

state 137
	ActualParameters :  LPAREN_$$166 RPAREN 
	ActualParameters :  LPAREN_$$168 ColonExpList RPAREN 
	$$166 : _    (166)
	$$168 : _    (168)

	RPAREN  reduce 166
	.  reduce 168

	$$166  goto 193
	$$168  goto 194

state 138
	factor :  LPAREN $$217_expression RPAREN 

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	expression  goto 195
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	term  goto 76
	lsAddTerm  goto 73

state 139
	factor :  NOT $$219_factor 

	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	prIdent  goto 86
	designator  goto 82
	factor  goto 196
	setexpr  goto 81

state 140
	setexpr :  LBRACKET $$240_oplsElement RBRACKET 
	oplsElement : _    (244)

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  reduce 244

	ident  goto 31
	oplsElement  goto 197
	expression  goto 71
	prIdent  goto 86
	ElementList  goto 69
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	Element  goto 70
	term  goto 76
	lsAddTerm  goto 73

state 141
	setexpr :  prIdent LBRACE_$$242 oplsElement RBRACE 
	$$242 : _    (242)

	.  reduce 242

	$$242  goto 198

state 142
	ConstDecl :  CONST $$24 ConstDef SEMICOLON_    (25)

	.  reduce 25


state 143
	TypeDecl :  TYPE $$29 TypeDef $$30_SEMICOLON 

	SEMICOLON  shift 199
	.  error


state 144
	VarDecl :  VAR $$36 VarDef $$37_SEMICOLON 

	SEMICOLON  shift 200
	.  error


state 145
	ProcedureDecl :  FunctionHeader block END SEMICOLON_    (53)

	.  reduce 53


state 146
	block :  oplsDeclaration BEGIN $$6_StatementSequence 
	opLabel : _    (149)

	error  shift 203
	.  reduce 149

	StatementSequence  goto 201
	statement  goto 202
	opLabel  goto 204

state 147
	ProcedureDecl :  ProcedureHeader block END SEMICOLON_    (54)

	.  reduce 54


state 148
	FunctionHeader :  FunctionPrefix fparameterList COLON $$50_prIdent $$51 SEMICOLON 

	IDENT  shift 27
	.  error

	ident  goto 31
	prIdent  goto 205

state 149
	parameterList :  LPAREN $$59 lsParam_RPAREN 
	lsParam :  lsParam_SEMICOLON $$132 formalParam 

	SEMICOLON  shift 207
	RPAREN  shift 206
	.  error


state 150
	lsParam :  formalParam_    (131)

	.  reduce 131


state 151
	formalParam :  PROCEDURE_$$134 prIdentList 
	$$134 : _    (134)

	.  reduce 134

	$$134  goto 208

state 152
	formalParam :  opParamType_prIdentList COLON $$136 typeIdentifier 

	IDENT  shift 27
	.  error

	ident  goto 31
	prIdent  goto 210
	prIdentList  goto 209

state 153
	opParamType :  VAR_    (139)

	.  reduce 139


state 154
	opParamType :  FUNCTION_    (140)

	.  reduce 140


state 155
	program :  PROGRAM ident zoplsIdent SEMICOLON $$4_block END DOT 
	oplsDeclaration : _    (9)

	error  shift 13
	SHARP  shift 14
	CONST  shift 16
	LABEL  shift 15
	FORWARD  shift 46
	FUNCTION  shift 23
	PROCEDURE  shift 24
	TYPE  shift 17
	VAR  shift 18
	.  reduce 9

	lsDeclaration  goto 47
	block  goto 211
	oplsDeclaration  goto 45
	declaration  goto 6
	IncludeDecl  goto 7
	LabelDecl  goto 8
	ConstDecl  goto 9
	TypeDecl  goto 10
	VarDecl  goto 11
	ProcedureDecl  goto 12
	ProcedurePrefix  goto 22
	ProcedureHeader  goto 20
	FunctionPrefix  goto 21
	FunctionHeader  goto 19

state 156
	zoplsIdent :  LPAREN IdentList RPAREN_    (281)

	.  reduce 281


state 157
	IdentList :  IdentList COMMA_ident 

	IDENT  shift 27
	.  error

	ident  goto 212

state 158
	ConstDef :  exportIdent EQUALS $$27 expression_    (28)

	.  reduce 28


state 159
	TypeDef :  exportIdent EQUALS $$34 typeDefinition_    (35)

	.  reduce 35


state 160
	typeDefinition :  SimpleType_    (61)

	.  reduce 61


state 161
	typeDefinition :  PointerType_    (62)

	.  reduce 62


state 162
	typeDefinition :  ArrayType_    (63)

	.  reduce 63


state 163
	typeDefinition :  FileType_    (64)

	.  reduce 64


state 164
	typeDefinition :  SetType_    (65)

	.  reduce 65


state 165
	typeDefinition :  RecordType_    (66)

	.  reduce 66


state 166
	SimpleType :  typeIdentifier_    (67)

	.  reduce 67


state 167
	SimpleType :  enumeration_    (68)

	.  reduce 68


state 168
	SimpleType :  SubrangeType_    (69)

	.  reduce 69


state 169
	PointerType :  UPARROW_$$93 prIdent 
	$$93 : _    (93)

	.  reduce 93

	$$93  goto 213

state 170
	ArrayType :  opPACKED_ARRAY $$95 bracketedSimpleTypeList OF $$96 typeDefinition 

	ARRAY  shift 214
	.  error


state 171
	FileType :  PFILE_$$104 OF $$105 typeDefinition 
	$$104 : _    (104)

	.  reduce 104

	$$104  goto 215

state 172
	SetType :  SET_$$128 OF $$129 SimpleType 
	$$128 : _    (128)

	.  reduce 128

	$$128  goto 216

state 173
	RecordType :  RECORD_$$107 FieldList opCase END 
	$$107 : _    (107)

	.  reduce 107

	$$107  goto 217

state 174
	typeIdentifier :  prIdent_    (278)

	.  reduce 278


state 175
	enumeration :  LPAREN_$$70 prIdentList RPAREN 
	$$70 : _    (70)

	.  reduce 70

	$$70  goto 218

state 176
	SubrangeType :  NUMBER_$$72 DOTDOT $$73 constant 
	$$72 : _    (72)

	.  reduce 72

	$$72  goto 219

state 177
	SubrangeType :  CHARCONST_$$75 DOTDOT $$76 constant 
	$$75 : _    (75)

	.  reduce 75

	$$75  goto 220

state 178
	SubrangeType :  IDENT_$$78 DOTDOT $$79 constant 
	ident :  IDENT_    (287)
	$$78 : _    (78)

	DOTDOT  reduce 78
	.  reduce 287

	$$78  goto 221

state 179
	SubrangeType :  PLUS_$$81 prIdent DOTDOT $$82 constant 
	SubrangeType :  PLUS_NUMBER $$87 DOTDOT $$88 constant 
	$$81 : _    (81)

	NUMBER  shift 223
	.  reduce 81

	$$81  goto 222

state 180
	SubrangeType :  MINUS_$$84 prIdent DOTDOT $$85 constant 
	SubrangeType :  MINUS_NUMBER $$90 DOTDOT $$91 constant 
	$$84 : _    (84)

	NUMBER  shift 225
	.  reduce 84

	$$84  goto 224

state 181
	opPACKED :  PACKED_    (103)

	.  reduce 103


state 182
	VarDef :  varIdentList COLON $$41 typeDefinition_    (42)

	.  reduce 42


state 183
	varIdentList :  varIdentList COMMA $$296 exportIdent_    (297)

	.  reduce 297


state 184
	ElementList :  ElementList COMMA $$265_Element 

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	expression  goto 71
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	Element  goto 226
	term  goto 76
	lsAddTerm  goto 73

state 185
	Element :  expression DOTDOT $$262_expression 

	PLUS  shift 74
	MINUS  shift 75
	LPAREN  shift 83
	LBRACKET  shift 85
	IDENT  shift 27
	NUMBER  shift 78
	CHARCONST  shift 79
	STRCONST  shift 80
	NOT  shift 84
	.  error

	ident  goto 31
	expression  goto 227
	prIdent  goto 86
	designator  goto 82
	factor  goto 77
	setexpr  goto 81
	SimpleExpression  goto 72
	term  goto 76
	lsAddTerm  goto 73

state 186
	expression :  SimpleExpression relation SimpleExpression_    (228)

	.  reduce 228


state 187
	term :  term_MulOperator factor 
	lsAddTerm :  lsAddTerm AddOperator term_    (275)
